Fix small gap at bottom of border in popup

--- a/packages/site/src/css/style.less
+++ b/packages/site/src/css/style.less
@@ -45,6 +45,9 @@ main {
 }
 
 #photo-popup {
+  display: flex;
+  flex-direction: column;
+
   max-width: max(85vw, 400px);
   padding: 0px;
   border: none;
